syntax = "proto3";

package pb;

option go_package = "./";

message Order {
  string id = 1;
  string account_id = 2;
  bytes created_at = 3;
  double total = 4;
  repeated OrderedProduct products = 5;
}

message OrderedProduct {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  uint32 quantity = 5;
}

message PostOrderRequest {
    message OrderProduct {
        string productId = 1;
        uint32 quantity = 2;
    }
    string AccountId = 1;
    repeated OrderProduct products = 2;
}


message PostOrderResponse {
  Order order = 1;
}


message GetOrdersRequest {
    Order order = 1;
}


message GetOrdersResponse {
  repeated Order orders = 1;
}


message GetOrderForAccountRequest {
  string accountId = 1;
}

message GetOrderForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc PostOrder(PostOrderRequest) returns (PostOrderResponse){  
  };
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse){ 
  };
  rpc GetOrderForAccount(GetOrderForAccountRequest) returns (GetOrderForAccountResponse){
  };
}